# langcrew

./: .cursorrules  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  compose-super-agent.yaml  compose.yaml  docker-compose.yml  test_memory_refactor.py
.github/workflows/: _lint.yml  _test.yml  ci.yml  test.yml
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/pages/: welcome.astro
docs/src/styles/: custom-fonts.css
examples/components/: README.md
examples/components/guardrail/: README.md  guardrail_example.py  pyproject.toml
examples/components/hitl/: README.md  hitl_example.py  pyproject.toml
examples/components/mcp/: .env.example  README.md  pyproject.toml
examples/components/mcp/src/mcp/: crew.py  main.py
examples/components/mcp/src/mcp/config/: agents.yaml  tasks.yaml
examples/components/mcp/src/mcp/config/calculator/: agents.yaml  tasks.yaml
examples/components/mcp/src/mcp/tools/: calculator_stdio.py
examples/components/web/super_agent/: .env.example  .gitignore  Dockerfile  README.md  compose-super-agent.yaml  pyproject.toml  run_docker.sh
examples/components/web/super_agent/src/super_agent/: main.py  server.py
examples/components/web/super_agent/src/super_agent/agent/: crew.py  enhanced_crew.py
examples/components/web/super_agent/src/super_agent/common/: checkpointer_state_manager.py  sandbox_config.py  session_state.py
examples/components/web/super_agent/src/super_agent/config/: config.py  prompt.py
examples/components/web/super_agent/src/super_agent/tool/: cloud_phone_streaming_tool.py  virtual_phone_hook.py
examples/components/web/web_chat/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  nginx.conf  pyproject.toml  run_server.py  start-services.sh  test_api.py
examples/components/web/web_chat/src/web_chat/: __init__.py  crew.py  server.py  tools.py
examples/components/web/web_chat/web/: package.json  pnpm-lock.yaml  rsbuild.config.mjs
examples/components/web/web_chat/web/src/: App.jsx
examples/deep-research/: .env.example  README.md  pyproject.toml
examples/deep-research/src/deep_research/: crew.py  main.py
examples/deep-research/src/deep_research/config/: agents.yaml  tasks.yaml
examples/game-builder-crew/: README.md  pyproject.toml
examples/game-builder-crew/src/game_builder_crew/: agents_crew.py  main.py  tasks_crew.py
examples/game-builder-crew/src/game_builder_crew/config/agent/: agents.yaml
examples/game-builder-crew/src/game_builder_crew/config/task/: agents.yaml  tasks.yaml
examples/job-posting/: .env.example  README.md  pyproject.toml
examples/job-posting/src/job_posting/: crew.py  main.py
examples/marketing-strategy/: .env.example  README.md  pyproject.toml
examples/marketing-strategy/src/marketing_posts/: crew.py  main.py
examples/match-profile-to-positions/: README.md  pyproject.toml
examples/match-profile-to-positions/src/match_to_proposal/: crew.py  main.py
examples/match-profile-to-positions/src/match_to_proposal/config/: agents.yaml  tasks.yaml
examples/match-profile-to-positions/src/match_to_proposal/data/: cv.md  jobs.csv
examples/match-profile-to-positions/src/match_to_proposal/tools/: __init__.py  custom_tools.py
examples/recruitment/: .env.example  README.md  pyproject.toml
examples/recruitment/src/recruitment/: crew.py  main.py
examples/recruitment/src/recruitment/tools/: client.py  driver.py  linkedin.py
examples/surprise-trip/: .env.example  README.md  pyproject.toml
examples/surprise-trip/src/surprise_travel/: crew.py  main.py
examples/surprise-trip/src/surprise_travel/config/: tasks.yaml
libs/langcrew/: README.md  pyproject.toml
libs/langcrew-tools/: README.md  pyproject.toml
libs/langcrew-tools/e2b-template/: e2b.Dockerfile  pw-config.json  start.sh
libs/langcrew-tools/langcrew_tools/: __init__.py  astream_tool.py  base.py
libs/langcrew-tools/langcrew_tools/browser/: __init__.py  browser_manager.py  browser_use_patches.py  browser_use_streaming_tool.py  prompt.py  sandbox_config.py
libs/langcrew-tools/langcrew_tools/cloud_phone/: README.md  __init__.py  actions.py  adb_manager.py  agent_as_tool.py  base.py  context.py  langchain_tools.py  prompt.py  streaming_tool.py  virtual_phone_hook.py
libs/langcrew-tools/langcrew_tools/code_interpreter/: README.md  langchain_tools.py
libs/langcrew-tools/langcrew_tools/commands/: README.md  langchain_tools.py  terminal_formatter.py
libs/langcrew-tools/langcrew_tools/delivery/: langchain_tools.py
libs/langcrew-tools/langcrew_tools/fetch/: __init__.py  langchain_tools.py
libs/langcrew-tools/langcrew_tools/file_parser/: README.md  __init__.py  config.py  langchain_tools.py
libs/langcrew-tools/langcrew_tools/filesystem/: README.md  __init__.py  file_validators.py  langchain_tools.py
libs/langcrew-tools/tests/: conftest.py
libs/langcrew/langcrew/: __init__.py  agent.py  crew.py  guardrail.py  llm_factory.py  project.py  prompt_builder.py  runnable_crew.py  task.py  types.py
libs/langcrew/langcrew/context/: hooks.py  (+2 more)
libs/langcrew/tests/: README.md  __init__.py  conftest.py  test_setup.py
web/: .dockerignore  .env  .gitignore  DOCKER_README.md  Dockerfile  README.md  eslint.config.mjs  nginx.conf  package.json  pnpm-lock.yaml  rsbuild.config.mjs  rslib.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
web/agentx/: 327.js  index.css  index.js
web/public/: NZsdk.min.2.8.1.js  hashWorker.js
web/src/: AgentX.tsx  App.jsx  index.css  index.jsx  module.d.ts
web/src/config/: en.json  i18n.js  resources.js  ru.json  zh.json
web/src/hooks/: useChunksProcessor.ts  useReplay.tsx  useTranslation.tsx  useUrlContent.ts
web/src/pages/: chat.tsx  fallback.tsx  home.tsx
web/src/registry/: README.md  builtin.ts  index.ts
web/src/router/: index.jsx
web/src/services/: README.md  SUMMARY.md  api.ts  request.ts
web/src/store/: agent.ts  chat.ts  index.ts
web/src/types/: index.ts
web/src/utils/: eventBus.ts  file.ts  index.ts  json.ts  parsePartialJson.test.ts  parser.ts
(+342 files in other folders)
