[project]
name = "recruitment"
version = "0.1.0"
description = "Recruitment using LangCrew"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "dotenv>=0.9.9",
    "selenium>=4.21.0",
    "langcrew>=0.1.1",
    "langcrew-tools>=0.1.1",
]

[project.scripts]
recruitment = "recruitment.main:run"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
