[project]
name = "surprise_travel"
version = "0.1.0"
description = "surprise-travel using crewAI and LangCrew"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "dotenv>=0.9.9",
    "crewai[tools]>=0.130.0",
    "crewai-tools>=0.47.1",
    "crawl4ai>=0.3.0",
    "langcrew-tools>=0.1.0",
    "langcrew>=0.1.0",
]

[tool.uv]
extra-index-url = ["https://nexus.lingyiwanwu.net/repository/pypi-hosted/simple"]

[project.scripts]
surprise_travel = "surprise_travel.main:run"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
