[project]
name = "surprise_travel"
version = "0.1.0"
description = "surprise-travel using crewAI and LangCrew"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "dotenv>=0.9.9",
    "crawl4ai>=0.3.0",
    "langcrew-tools>=0.1.1",
    "langcrew>=0.1.1",
]

[project.scripts]
surprise_travel = "surprise_travel.main:run"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
