[project]
name = "langcrew-mcp-example"
version = "0.1.0"
description = "LangCrew MCP component example demonstrating SSE, StreamHttp, and stdio MCP server integrations"
authors = [
    { name = "LangCrew Team", email = "team@langcrew.ai" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=0.9.9",
    "langchain-openai>=0.1.0",
    "langcrew-tools>=0.1.0",
    "langcrew>=0.1.0",
    "fastmcp>=2.11.2",
]

[tool.uv.sources]
langcrew = { path = "../../../libs/langcrew", editable = true }
langcrew-tools = { path = "../../../libs/langcrew-tools", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/mcp"]


[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
