[project]
name = "web-chat-example"
version = "0.1.0"
description = "Web Chat API Example using LangCrew Web Components"
authors = [
    { name = "LangCrew Team", email = "team@langcrew.ai" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    # Local packages
    "langcrew",
    "langcrew-tools",
    # LangChain ecosystem
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.2.0",
    # Multi-agent framework
    "crewai>=0.30.0",
    "crewai-tools>=0.4.0",
    # Web framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    # Core utilities
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.2.0",
]

[project.scripts]
web_chat_server = "web_chat.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
extra-index-url = ["https://nexus.lingyiwanwu.net/repository/pypi-hosted/simple"]

[tool.hatch.build.targets.wheel]
packages = ["src/web_chat"]

[tool.hatch.metadata]
allow-direct-references = true
